# claudex

./: .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  PRE_PUBLISH_CHECKLIST.md  PYPI_PUBLISHING_GUIDE.md  PYPI_READY.md  README.md  STATUS_REPORT.md  claudex.bat  main.py  pyproject.toml
.github/workflows/: ci.yml  pr-validate.yml  test.yml
claudex/: __init__.py  __main__.py  cli.py  copier.py  detectors.py  generator.py  validator.py
claudex/presets/: python-django.yaml  python-fastapi.yaml
claudex/templates/project/: CLAUDE.md.template  mcp.json.template  settings.json
global/: CLAUDE.md  settings.json
global/rules/: git-policy.md  lint-format.md  security.md
presets/: generic.yaml  nextjs.yaml
project/commands/: audit.md  background-queue.md  dev.md  expert-architect.md  expert-backend.md  expert-devops.md  expert-product.md  night-kick.md  parallel.md  run-tests.md  validate-consistency.md
project/feedback/: IMPROVEMENT_PROPOSALS.md  VIOLATIONS_LOG.md
project/github-workflows/: ci.yml.template
project/hooks/: pre-compact.py  session-end.py
project/rules/development/: AUDIT_GUIDELINES.md  CONSISTENCY_VALIDATION_GUIDELINES.md  DOCSTRING_GUIDELINES.md  NAMING_CONVENTIONS.md  WORKFLOW_ENFORCEMENT.md
project/session/: PARALLEL_SESSIONS.md
tests/: conftest.py  test_cli.py  test_cli_integration.py  test_copier.py  test_detectors.py  test_generator.py  test_validator.py
tests/fixtures/django_project/: pyproject.toml
tests/fixtures/fastapi_project/: pyproject.toml
tests/fixtures/nextjs_project/: package.json
(+30 files in other folders)
